perf: change font-display from swap to block for preloaded web fonts to resolve layout shifts

--- a/app/app.css
+++ b/app/app.css
@@ -7,7 +7,7 @@
 	font-family: "Bodoni Moda";
 	font-style: normal;
 	font-weight: 400 900;
-	font-display: swap;
+	font-display: block;
 	src: url("/fonts/bodoni-moda.woff2") format("woff2");
 }
 
@@ -15,7 +15,7 @@
 	font-family: "Bodoni Moda";
 	font-style: italic;
 	font-weight: 400 900;
-	font-display: swap;
+	font-display: block;
 	src: url("/fonts/bodoni-moda-italic.woff2") format("woff2");
 }
 
@@ -23,7 +23,7 @@
 	font-family: "Libre Bodoni";
 	font-style: normal;
 	font-weight: 400 700;
-	font-display: swap;
+	font-display: block;
 	src: url("/fonts/libre-bodoni.woff2") format("woff2");
 }
 
@@ -31,7 +31,7 @@
 	font-family: "Libre Bodoni";
 	font-style: italic;
 	font-weight: 400 700;
-	font-display: swap;
+	font-display: block;
 	src: url("/fonts/libre-bodoni-italic.woff2") format("woff2");
 }
 
@@ -42,7 +42,7 @@
 	font-style: italic;
 	font-weight: 100 900;
 	font-stretch: 75% 125%;
-	font-display: swap;
+	font-display: block;
 	src: url("/fonts/athene-voyage.woff2") format("woff2");
 }
 
